# Burndown-Agent

./: .clinerules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  USAGE.md  burndown_agent.py  burndown_server.py  config.env.example  install.sh  local-server.bash  pyproject.toml  setup.py  start_agent.sh  test_az.py  test_azd_connection.py  test_burndown_tool.py
src/backlog_pilot/: __init__.py  azure_devops.py  cli.py  config.py  github_client.py
